ingress/ingress-rules.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hipstershop
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    # works for app, loadgen, jaeger
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-hipster-shop-frontendproxy
            port: 
              number: 8080
    host: "demo.sreplayground.local"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chaos-dashboard
  namespace: chaos-mesh
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chaos-dashboard
            port: 
              number: 2333
    host: "chaostest.sreplayground.local"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port: 
              number: 9090
    host: "prometheus.sreplayground.local"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
    host: "grafana.sreplayground.local"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: cilium
    meta.helm.sh/release-namespace: kube-system
  labels:
    app.kubernetes.io/name: hubble-ui
    k8s-app: hubble-ui
  name: hubble-ui
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hubble-ui
            port:
              name: http
        path: /
        pathType: Prefix
    host: hubble.sreplayground.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    k8s-app: otel
  name: ingress-browser-tracing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app-hipster-shop-otelcol
            port:
              number: 4318
        path: /v1/traces
        pathType: Prefix
    host: otel.sreplayground.local
